Fix issue with well at the bottom of the study group not aligning. Remove underscore on stylesheet components imports. Scss takes care of this.

--- a/client/css/_study_groups.scss
+++ b/client/css/_study_groups.scss
@@ -60,6 +60,10 @@
     position: relative;
     top: 8px;
   }
+
+  .well--end-of-page {
+    padding: 5px;
+  }
 }
 
 .newStudyGroup {
